Second Html File Updated

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <p class="font-bold">06</p>
                     </div>
                     <div>
-                        <button class=" bg-blue-400 flex items-center gap-4 rounded-lg p-3">
+                        <button id="loadPage" class=" bg-blue-400 flex items-center gap-4 rounded-lg p-3">
                             <img class="w-12 h-12" src="assets/board.png" alt="">
                             <p class="font-bold text-white">Discover Something <br> New today</p>
                         </button>
