--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               <div class="card bg-blue-100 ">
                 <div class="card-body">
                   <h2 class="card-title font-bold">Optimize  Home page  </h2>
-                  <p class="text-[12px]">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly</p>
+                  <p class="text-[12px]">Debug using Chrome DevTools, check for overlapping elements and ensure onClick works properly</p>
                   <div class="card-actions justify-end">
                     <p class="text-[12px] font-semibold">Deadline <br> 21th march 2025</p>
                     <button id="completed-3" class="btn bg-blue-600 text-white px-5">Completed</button>
